create dynamic formations (433 442), add created players to a container

--- a/index.html
+++ b/index.html
@@ -24,104 +24,44 @@
     </div>
 
     <div class="manager" id="manager">
-        <img src="images/MANAGER card.png" alt="">
+        <img src="images/madrid logo-cutout.png" alt="">
     </div>
 
     <div class="main-main">
         <div class="field-container">
-
-            <div class="formation-442" id="formation-442">
-                <div class="attack" id="attack">
-                    <div class="attack1" id="st1">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="attack2" id="st2">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
+            <div class="formation" id="formation">
+                <div class="position position1" id="position1">
+                    <img src="images/bbbbbbbb.png" alt="">
                 </div>
-                <div class="milieu" id="milieu">
-                    <div class="milieu1" id="cm1">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="milieu2" id="cm2">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="milieu3" id="rm">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="milieu4" id="lm">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
+                <div class="position position2" id="position2">
+                    <img src="images/bbbbbbbb.png" alt="">
                 </div>
-                <div class="deffence" id="deffence">
-                    <div class="deffence1" id="cb1">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="deffence2" id="cb2">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="deffence3" id="lb">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="deffence4" id="rb">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
+                <div class="position position3" id="position3">
+                    <img src="images/bbbbbbbb.png" alt="">
                 </div>
-                <div class="gardien" id="gardien">
-                    <div class="gardien1" id="gk">
-                        <span>
-                            <img src="images/bbbbbbbb.png" alt="">
-                        </span>
-                    </div>
+                <div class="position position4" id="position4">
+                    <img src="images/bbbbbbbb.png" alt="">
                 </div>
-
-            </div>
-
-
-
-            <div class="formation-433" id="formation-433">
-                <div class="attack" id="attack">
-                    <div class="attack1" id="st">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="attack2" id="lw">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="attack3" id="rw">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
+                <div class="position position5" id="position5">
+                    <img src="images/bbbbbbbb.png" alt="">
                 </div>
-                <div class="milieu" id="milieu">
-                    <div class="milieu1" id="cm1">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="milieu2" id="cm2">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="milieu3" id="cm3">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
+                <div class="position position6" id="position6">
+                    <img src="images/bbbbbbbb.png" alt="">
                 </div>
-                <div class="deffence" id="deffence">
-                    <div class="deffence1" id="cb1">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="deffence2" id="cb2">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="deffence3" id="lb">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
-                    <div class="deffence4" id="rb">
-                        <img src="images/bbbbbbbb.png" alt="">
-                    </div>
+                <div class="position position7" id="position7">
+                    <img src="images/bbbbbbbb.png" alt="">
                 </div>
-                <div class="gardien" id="gardien">
-                    <div class="gardien1" id="gk">
-                        <div>
-                            <img src="images/bbbbbbbb.png" alt="">
-                        </div>
-                    </div>
+                <div class="position position8" id="position8">
+                    <img src="images/bbbbbbbb.png" alt="">
+                </div>
+                <div class="position position9" id="position9">
+                    <img src="images/bbbbbbbb.png" alt="">
+                </div>
+                <div class="position position10" id="position10">
+                    <img src="images/bbbbbbbb.png" alt="">
+                </div>
+                <div class="position position11" id="position11">
+                    <img src="images/bbbbbbbb.png" alt="">
                 </div>
             </div>
         </div>
@@ -132,54 +72,13 @@
                 <input type="text" id="squad-name" name="squad-name"> 
             </div>
             <div class="squad-info"> 
-                <button id="433">4-3-3</button> 
-                <button id="442">4-4-2</button> 
+                <button id="btn433">4-3-3</button> 
+                <button id="btn442">4-4-2</button> 
             </div>
         </div>
     </div>
 
-    <div class="subs" id="subs">
-        <div class="palyer-card1">
-            <img src="images/MANAGER card.png" alt="">
-            <p></p>
-        </div>
-        <div class="palyer-card2">
-            <img src="images/MANAGER card.png" alt="">
-            <p></p>
-        </div>
-        <div class="palyer-card3">
-            <img src="images/MANAGER card.png" alt="">
-            <p></p>
-        </div>
-        <div class="palyer-card4">
-            <img src="images/MANAGER card.png" alt="">
-            <p></p>
-        </div>
-        <div class="palyer-card5">
-            <img src="images/MANAGER card.png" alt="">
-            <p></p>
-        </div>
-        <div class="palyer-card6">
-            <img src="images/MANAGER card.png" alt="">
-            <p></p>
-        </div>
-        <div class="palyer-card7">
-            <img src="images/MANAGER card.png" alt="">
-            <p></p>
-        </div>
-        <div class="palyer-card8">
-            <img src="images/MANAGER card.png" alt="">
-            <p></p>
-        </div>
-        <div class="palyer-card9">
-            <img src="images/MANAGER card.png" alt="">
-            <p></p>
-        </div>
-        <div class="palyer-card10">
-            <img src="images/MANAGER card.png" alt="">
-            <p></p>
-        </div>
-    </div>
+    <div class="subs" id="subs"></div>
 
     <div id="create-player-popup" class="popup hidden">
         <div class="popup-content">
@@ -200,11 +99,11 @@
                             <input type="text" id="player-first-name" name="player-first-name" placeholder="Enter player's first name">
                         </div>
                         <div class="player-nationality">
-                            <label for="nationality-photo">Nationality: </label>
+                            <label for="image-nationality">Nationality: </label>
                             <input type="url" id="image-nationality" name="player-nationality" placeholder="Enter image link">
                         </div>
                         <div class="player-club">
-                            <label for="club-photo">Club:</label>
+                            <label for="image-club">Club:</label>
                             <input type="url" id="image-club" name="player-club" placeholder="Enter image link">
                             </div>
                     </div>
@@ -233,7 +132,7 @@
                     <div id="general-stats">
                         <div>
                             <label for="pac">PAC:</label>
-                            <input type="number" id="pac" name="pac" placeholder="0-100">
+                            <input type="number" id="pac" name="pac" placeholder="0-100" min="1" max="100">
                         </div>
                         <div>
                             <label for="sho">SHO:</label>
@@ -290,35 +189,6 @@
             </form>
         </div>
     </div>
-
-
-    <div class="card" id="card">
-        <div class="rating-position" id="rating-position">
-            <p id="position"></p>
-            <p id="rating"></p>
-        </div>
-        <div class="photo" id="photo">
-        </div>
-        <div class="player-name" id="player-name">
-        </div>
-        <div class="powers" id="powers">
-            <div id="pac"></div>
-            <div id="sho"></div>
-            <div id="pas"></div>
-            <div id="dri"></div>
-            <div id="def"></div>
-            <div id="phy"></div>
-        </div>
-        <div class="nation-club" id="nation-club">
-            <div class="nation" id="nation">
-            </div>
-            <div class="club" id="club">
-            </div>
-        </div>
-    </div>
-
-
-
 
     <script src="main.js"></script>
 </body>
