Drag and Drop and swiping functionalities

--- a/index.html
+++ b/index.html
@@ -30,38 +30,38 @@
     <div class="main-main">
         <div class="field-container">
             <div class="formation" id="formation">
-                <div class="position position1" id="position1">
-                    <img src="images/bbbbbbbb.png" alt="">
+                <div class="position" id="position1">
+                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
                 </div>
-                <div class="position position2" id="position2">
-                    <img src="images/bbbbbbbb.png" alt="">
+                <div class="position" id="position2">
+                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
                 </div>
-                <div class="position position3" id="position3">
-                    <img src="images/bbbbbbbb.png" alt="">
+                <div class="position" id="position3">
+                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
                 </div>
-                <div class="position position4" id="position4">
-                    <img src="images/bbbbbbbb.png" alt="">
+                <div class="position" id="position4">
+                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
                 </div>
-                <div class="position position5" id="position5">
-                    <img src="images/bbbbbbbb.png" alt="">
+                <div class="position" id="position5">
+                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
                 </div>
-                <div class="position position6" id="position6">
-                    <img src="images/bbbbbbbb.png" alt="">
+                <div class="position" id="position6">
+                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
                 </div>
-                <div class="position position7" id="position7">
-                    <img src="images/bbbbbbbb.png" alt="">
+                <div class="position" id="position7">
+                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
                 </div>
-                <div class="position position8" id="position8">
-                    <img src="images/bbbbbbbb.png" alt="">
+                <div class="position" id="position8">
+                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
                 </div>
-                <div class="position position9" id="position9">
-                    <img src="images/bbbbbbbb.png" alt="">
+                <div class="position" id="position9">
+                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
                 </div>
-                <div class="position position10" id="position10">
-                    <img src="images/bbbbbbbb.png" alt="">
+                <div class="position" id="position10">
+                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
                 </div>
-                <div class="position position11" id="position11">
-                    <img src="images/bbbbbbbb.png" alt="">
+                <div class="position" id="position11">
+                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
                 </div>
             </div>
         </div>
