correct how cards displaying in the field, and fixed selected position button backrd color bug

--- a/index.html
+++ b/index.html
@@ -8,70 +8,49 @@
 </head>
 <body>
     <div class="header" id="header">
-        <div class="title-logo">
-            <div class="title">
-                <h1>FUT Champions Ultimate Team</h1>
-            </div>
-            <div class="logo">
-                <!-- <img id="logo" src="images/real madrid-cutout.png" alt=""> -->
-            </div>
-        </div>
-        <div class="head-buttons" id="head-buttons">
-            <div class="add-player-button" id="create-palyer-button">
-                <button>Create Player</button>
-            </div>
+        <div class="title">
+            <h1>FUT Champions Ultimate Team</h1>
         </div>
     </div>
 
-    <div class="manager" id="manager">
-        <img src="images/madrid logo-cutout.png" alt="">
-    </div>
-
-    <div class="main-main">
+    <div class="mainpage">
         <div class="field-container">
             <div class="formation" id="formation">
-                <div class="position" id="position1">
-                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
+                <div class="position" id="rw/st2">
                 </div>
-                <div class="position" id="position2">
-                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
+                <div class="position" id="st/st1">
                 </div>
-                <div class="position" id="position3">
-                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
+                <div class="position" id="lw/lm">
                 </div>
-                <div class="position" id="position4">
-                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
+                <div class="position" id="cm1/rm">
                 </div>
-                <div class="position" id="position5">
-                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
+                <div class="position" id="cm3/cm2">
                 </div>
-                <div class="position" id="position6">
-                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
+                <div class="position" id="cm1/cm1">
                 </div>
-                <div class="position" id="position7">
-                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
+                <div class="position" id="lb">
                 </div>
-                <div class="position" id="position8">
-                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
+                <div class="position" id="cb2">
                 </div>
-                <div class="position" id="position9">
-                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
+                <div class="position" id="cb1">
                 </div>
-                <div class="position" id="position10">
-                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
+                <div class="position" id="rb">
                 </div>
-                <div class="position" id="position11">
-                    <!-- <img src="images/bbbbbbbb.png" alt=""> -->
+                <div class="position" id="gk">
                 </div>
             </div>
         </div>
 
         <div class="create-squad" id="squad-info">
-            <div class="name">
+            <div class="squadname">
                 <label for="squad-name">Squad Name:</label> 
                 <input type="text" id="squad-name" name="squad-name"> 
             </div>
-            <div class="squad-info"> 
+            <div class="add-player-button" id="create-palyer-button">
+                <button>Create Player</button>
+            </div>
+            <div class="select-tactic"><p>Select tactic:</p></div>
+            <div class="squad-formations"> 
                 <button id="btn433">4-3-3</button> 
                 <button id="btn442">4-4-2</button> 
             </div>
