--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
         <div class="create-squad" id="squad-info">
             <div class="squadname">
-                <label for="squad-name">Squad Name:</label> 
-                <input type="text" id="squad-name" name="squad-name"> 
+                <!-- <label for="squad-name">Squad Name:</label> 
+                <input type="text" id="squad-name" name="squad-name">  -->
             </div>
             <div class="add-player-button" id="create-palyer-button">
                 <button>Create Player</button>
@@ -87,11 +87,11 @@
                             </div>
                     </div>
                     <div>
-                        <label for="image-url">Image URL:</label>
+                        <label id="photoP" for="image-url">Image URL:</label>
                         <input type="url" id="image-url" name="image-url" placeholder="Enter image link">
                     </div>
                 </div>
-                <h2 id="position-title">Position: </h2>
+                <h2 id="positiontitle">Position: </h2>
 
                 <div class="div3" id="position-options">
                     <div><button type="button" id="GK" class="position-btn" data-position="GK">GK</button></div>
